--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.0.0",
+    "mpdf/mpdf": "^7.0",
+    "dompdf/dompdf": "^0.8.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0"
